# state_machine_c_example

./: CMakeLists.txt  main.c  state_machine.h
state_machine/: _state_machine.h  state_machine.c  state_paused.c  state_playing.c  state_powered_off.c  state_powered_on.c  state_stopped.c
